<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20.0dip" 
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/home_time">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/pading_kuan_5"
            android:background="@drawable/shape_version"/>
        <TextView
            android:id="@+id/title"
            style="@style/font16_back"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:gravity="center"
            android:text="@string/dialog_tip"
            android:visibility="visible" />

        <View style="@style/Line_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="80.0dip"
            android:orientation="vertical" >

 <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_messge" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffd0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/dialog_srue" />
            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/basesub"/>

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:layout_weight="0.5"
                android:text="@string/dialog_cancel" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>